24/09/13 added new staging environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -43,3 +43,9 @@ production:
   database: HomeBloodPressure_production
   pool: 5
   timeout: 5000
+
+staging:
+  adapter: postgresql
+  database: HomeBloodPressure_production
+  pool: 5
+  timeout: 5000
